# reunion

./: .gitignore  .woodpecker.yml  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ubuntu-pytest.yaml
.woodpecker/: debian.yaml
app/: reunion-client.py
debian/: changelog  control  rules
reunion/: __vectors__.py  __version__.py  cli.py  client.py  constants.py  multicast.py  primitives.py  server.py  session.py
src/reunion/: __vectors__.py  session.py
test/: test_deps.py  test_kat_from_seed.py  test_kat_vectors_from_seed.py  test_primitives.py  test_primitives_static_vectors.py  test_session.py
